--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
   "name": "react-native-date-format",
-  "version": "1.1.14",
-  "description": "",
+  "version": "1.1.16",
+  "description": "Format dateTime using react native",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ 
+  "homepage": "https://github.com/rmethaniya/RNDateFormat/#readme",
   "keywords": [
-    "react-native"
+    "react-native",
+    "ios","android","dateformat","dateTime","date"
   ],
-  "author": "Ravindra Methaniya",
+  "author": {
+    "name": "Ravindra Methaniya",
+    "email": "ravi.patel9637@gmail.com",
+    "url": "https://github.com/rmethaniya"
+  },
+  "bugs":{
+    "url": "https://github.com/rmethaniya/RNDateFormat/issues"
+  },
   "license": "MIT",
+  "lint-staged": {
+    "*.js": [
+      "npm run lint",
+      "git add"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rmethaniya/RNDateFormat.git"
+  },
   "devDependencies": {
-    "react-native": "0.60.5"
+    "react": "^16.8.6",
+    "react-native": "^0.60.0"
   },
   "peerDependencies": {
-    "react-native": "0.60.5"
-  }
+    "react": "^16.8.6",
+    "react-native": "^0.60.0"
+  }, 
+   "scripts": {},
+  "types": "index.d.ts"
 }
