--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
   "name": "react-native-date-format",
-  "version": "1.1.18",
+  "version": "1.1.19",
   "description": "Format dateTime using react native",
-  "main": "index.js",
- 
-  "homepage": "https://github.com/rmethaniya/RNDateFormat/#readme",
-  "keywords": [
-    "react-native",
-    "ios","android","dateformat","dateTime","date"
+  "react-native": "src/index.ts",
+  "types": "lib/typescript/index.d.ts",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "files": [
+    "/android",
+    "!/android/build",
+    "/ios",
+    "src/",
+    "lib/",
+    "/*.podspec"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rmethaniya/RNDateFormat"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "yarn lint",
+      "git add"
+    ]
+  },
+  "keywords": [
+    "react-native"
+  ],
+  "homepage": "https://github.com/rmethaniya/RNDateFormat/#readme",
+
   "author": {
     "name": "Ravindra Methaniya",
     "email": "ravi.patel9637@gmail.com",
     "url": "https://github.com/rmethaniya"
   },
-  "bugs":{
-    "url": "https://github.com/rmethaniya/RNDateFormat/issues"
-  },
   "license": "MIT",
-  "lint-staged": {
-    "*.js": [
-      "npm run lint",
-      "git add"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rmethaniya/RNDateFormat.git"
-  },
   "devDependencies": {
     "react": "^16.8.6",
     "react-native": "^0.60.0"
   },
+  "bugs": {
+    "url": "https://github.com/rmethaniya/RNDateFormat/issues"
+  },
   "peerDependencies": {
     "react": "^16.8.6",
     "react-native": "^0.60.0"
-  }, 
-   "scripts": {},
-  "types": "index.d.ts"
+  },
+  "scripts": {}
 }
