--- a/package.json
+++ b/package.json
@@ -1,50 +1,29 @@
 {
   "name": "react-native-date-format",
-  "version": "1.1.19",
   "description": "Format dateTime using react native",
-  "react-native": "src/index.ts",
-  "types": "lib/typescript/index.d.ts",
-  "main": "lib/commonjs/index.js",
-  "module": "lib/module/index.js",
-  "files": [
-    "/android",
-    "!/android/build",
-    "/ios",
-    "src/",
-    "lib/",
-    "/*.podspec"
-  ],
+  "main": "index.js",
+  "author": "Ravindra Methaniya (rmethaniya) <ravi.patel9637@gmail.com>",
+  "version": "1.1.21",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/rmethaniya/RNDateFormat"
   },
-  "lint-staged": {
-    "*.ts": [
-      "yarn lint",
-      "git add"
-    ]
-  },
-  "keywords": [
-    "react-native"
-  ],
-  "homepage": "https://github.com/rmethaniya/RNDateFormat/#readme",
-
-  "author": {
-    "name": "Ravindra Methaniya",
-    "email": "ravi.patel9637@gmail.com",
-    "url": "https://github.com/rmethaniya"
-  },
   "license": "MIT",
-  "devDependencies": {
-    "react": "^16.8.6",
-    "react-native": "^0.60.0"
-  },
   "bugs": {
     "url": "https://github.com/rmethaniya/RNDateFormat/issues"
   },
+  "types": "index.d.ts",
+  "homepage": "https://github.com/rmethaniya/RNDateFormat/#readme",
+  "keywords": [
+    "react-native"
+  ],
   "peerDependencies": {
     "react": "^16.8.6",
     "react-native": "^0.60.0"
   },
-  "scripts": {}
+  "devDependencies": {
+    "react": "^16.8.6",
+    "react-native": "^0.60.0"
+  }
 }
